objects/Contact.object
<CustomObject>
    <fields>
        <fullName>PRX_Contact_MSP__c</fullName>
        <label>PRX Contact MSP</label>
        <picklist>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRX_Contact_Person_Interest__c</fullName>
        <inlineHelpText>Examples: football, golf, museums,...</inlineHelpText>
        <label>Interest/hobbies</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/ICT Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management/ Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary/ Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities and Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Secretary/Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourgmestre/Bourgemeester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef de Corps/Korpschef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echevin/Schepen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receveur/Ontvanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT mgr without Security resp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT mgr with Security resp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>account manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrtCFO (Chief Finance Officer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Con</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRX_Title__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>